--- a/index.html
+++ b/index.html
@@ -736,6 +736,7 @@
             <ul class="hidden md:flex flex-grow justify-center space-x-2 text-sm font-medium uppercase tracking-widest text-white">
                 <li><a href="#hero-section" class="glass-nav-item"><span>Home</span></a></li>
                 <li><a href="#mens-rings" class="glass-nav-item"><span>Store</span></a></li>
+                <li><a href="catalog.html" class="glass-nav-item"><span>All Products</span></a></li>
                 <li><a href="#customization" class="glass-nav-item"><span>Customization</span></a></li>
                 <li><a href="#about-us" class="glass-nav-item"><span>About Us</span></a></li>
                 <li><a href="#contact-us" class="glass-nav-item"><span>Contact Us</span></a></li>
@@ -752,6 +753,7 @@
         <div id="mobile-menu" class="hidden md:hidden bg-black bg-opacity-70 px-4 pt-2 pb-4 space-y-2 text-white">
             <a href="#hero-section" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">Home</a>
             <a href="#mens-rings" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">Store</a>
+            <a href="catalog.html" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">All Products</a>
             <a href="#customization" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">Customization</a>
             <a href="#about-us" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">About Us</a>
             <a href="#contact-us" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">Contact Us</a>
@@ -768,7 +770,7 @@
                     <h1 class="text-4xl md:text-6xl font-serif font-light tracking-wide">Discover Your Sparkle</h1>
                     <p class="text-sm md:text-lg font-light max-w-2xl mx-auto">Experience the brilliance of jewelry and find the perfect piece for your special moments.</p>
                     <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6 pt-4 relative z-20"> <!-- Fixed hover effect with z-index -->
-                        <a href="#mens-rings" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
+                        <a href="catalog.html" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
                             Shop Now
                             <svg viewBox="0 0 24 24" class="star-1 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-2 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
@@ -777,7 +779,7 @@
                             <svg viewBox="0 0 24 24" class="star-5 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-6 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                         </a>
-                        <a href="#categories" class="button type1 scroll-to-link" style="pointer-events: auto;">
+                        <a href="catalog.html" class="button type1 scroll-to-link" style="pointer-events: auto;">
                             <div class="btn-txt">Explore</div>
                         </a>
                     </div>
@@ -791,7 +793,7 @@
                     <h1 class="text-4xl md:text-6xl font-serif font-light tracking-wide">Timeless Elegance</h1>
                     <p class="text-sm md:text-lg font-light max-w-2xl mx-auto">Our heritage is crafted into every piece. Discover the legacy of our master jewelers.</p>
                     <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6 pt-4 relative z-20"> <!-- Fixed hover effect with z-index -->
-                        <a href="#mens-rings" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
+                        <a href="catalog.html" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
                             Shop Now
                             <svg viewBox="0 0 24 24" class="star-1 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-2 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
@@ -800,7 +802,7 @@
                             <svg viewBox="0 0 24 24" class="star-5 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-6 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                         </a>
-                        <a href="#categories" class="button type1 scroll-to-link" style="pointer-events: auto;">
+                        <a href="catalog.html" class="button type1 scroll-to-link" style="pointer-events: auto;">
                             <div class="btn-txt">Explore</div>
                         </a>
                     </div>
@@ -814,7 +816,7 @@
                     <h1 class="text-4xl md:text-6xl font-serif font-light tracking-wide">Crafted for You</h1>
                     <p class="text-sm md:text-lg font-light max-w-2xl mx-auto">Bring your vision to life with our customization services. Design a piece as unique as you are.</p>
                     <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6 pt-4 relative z-20"> <!-- Fixed hover effect with z-index -->
-                        <a href="#mens-rings" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
+                        <a href="catalog.html" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
                             Shop Now
                             <svg viewBox="0 0 24 24" class="star-1 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-2 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
@@ -823,7 +825,7 @@
                             <svg viewBox="0 0 24 24" class="star-5 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-6 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                         </a>
-                        <a href="#categories" class="button type1 scroll-to-link" style="pointer-events: auto;">
+                        <a href="catalog.html" class="button type1 scroll-to-link" style="pointer-events: auto;">
                             <div class="btn-txt">Explore</div>
                         </a>
                     </div>
@@ -1057,7 +1059,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="#" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html#mens-rings-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1146,7 +1148,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="#" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html#necklaces-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1214,7 +1216,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="#" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html#gold-coins-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1299,7 +1301,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="#" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html#rings-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1367,7 +1369,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="#" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html#anklets-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1435,7 +1437,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="#" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html#gold-chains-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1503,7 +1505,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="#" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html#mangal-sutra-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1571,7 +1573,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="#" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html#female-bracelets-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1639,7 +1641,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="#" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html#watch-ornaments-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
