--- a/index.html
+++ b/index.html
@@ -735,8 +735,7 @@
             <!-- Navigation Links (Desktop) -->
             <ul class="hidden md:flex flex-grow justify-center space-x-2 text-sm font-medium uppercase tracking-widest text-white">
                 <li><a href="#hero-section" class="glass-nav-item"><span>Home</span></a></li>
-                <li><a href="#mens-rings" class="glass-nav-item"><span>Store</span></a></li>
-                <li><a href="catalog.html" class="glass-nav-item"><span>All Products</span></a></li>
+                <li><a href="catalog.html" class="glass-nav-item"><span>Store</span></a></li>
                 <li><a href="#customization" class="glass-nav-item"><span>Customization</span></a></li>
                 <li><a href="#about-us" class="glass-nav-item"><span>About Us</span></a></li>
                 <li><a href="#contact-us" class="glass-nav-item"><span>Contact Us</span></a></li>
@@ -753,7 +752,6 @@
         <div id="mobile-menu" class="hidden md:hidden bg-black bg-opacity-70 px-4 pt-2 pb-4 space-y-2 text-white">
             <a href="#hero-section" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">Home</a>
             <a href="#mens-rings" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">Store</a>
-            <a href="catalog.html" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">All Products</a>
             <a href="#customization" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">Customization</a>
             <a href="#about-us" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">About Us</a>
             <a href="#contact-us" class="block hover:bg-gray-800 rounded-md p-2 transition-colors">Contact Us</a>
@@ -770,7 +768,7 @@
                     <h1 class="text-4xl md:text-6xl font-serif font-light tracking-wide">Discover Your Sparkle</h1>
                     <p class="text-sm md:text-lg font-light max-w-2xl mx-auto">Experience the brilliance of jewelry and find the perfect piece for your special moments.</p>
                     <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6 pt-4 relative z-20"> <!-- Fixed hover effect with z-index -->
-                        <a href="catalog.html" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
+                        <a href="#mens-rings" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
                             Shop Now
                             <svg viewBox="0 0 24 24" class="star-1 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-2 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
@@ -779,7 +777,7 @@
                             <svg viewBox="0 0 24 24" class="star-5 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-6 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                         </a>
-                        <a href="catalog.html" class="button type1 scroll-to-link" style="pointer-events: auto;">
+                        <a href="#categories" class="button type1 scroll-to-link" style="pointer-events: auto;">
                             <div class="btn-txt">Explore</div>
                         </a>
                     </div>
@@ -793,7 +791,7 @@
                     <h1 class="text-4xl md:text-6xl font-serif font-light tracking-wide">Timeless Elegance</h1>
                     <p class="text-sm md:text-lg font-light max-w-2xl mx-auto">Our heritage is crafted into every piece. Discover the legacy of our master jewelers.</p>
                     <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6 pt-4 relative z-20"> <!-- Fixed hover effect with z-index -->
-                        <a href="catalog.html" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
+                        <a href="#mens-rings" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
                             Shop Now
                             <svg viewBox="0 0 24 24" class="star-1 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-2 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
@@ -802,7 +800,7 @@
                             <svg viewBox="0 0 24 24" class="star-5 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-6 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                         </a>
-                        <a href="catalog.html" class="button type1 scroll-to-link" style="pointer-events: auto;">
+                        <a href="#categories" class="button type1 scroll-to-link" style="pointer-events: auto;">
                             <div class="btn-txt">Explore</div>
                         </a>
                     </div>
@@ -816,7 +814,7 @@
                     <h1 class="text-4xl md:text-6xl font-serif font-light tracking-wide">Crafted for You</h1>
                     <p class="text-sm md:text-lg font-light max-w-2xl mx-auto">Bring your vision to life with our customization services. Design a piece as unique as you are.</p>
                     <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6 pt-4 relative z-20"> <!-- Fixed hover effect with z-index -->
-                        <a href="catalog.html" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
+                        <a href="#mens-rings" class="shop-now-button scroll-to-link" style="pointer-events: auto;">
                             Shop Now
                             <svg viewBox="0 0 24 24" class="star-1 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-2 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
@@ -825,7 +823,7 @@
                             <svg viewBox="0 0 24 24" class="star-5 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                             <svg viewBox="0 0 24 24" class="star-6 star"><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zM12 20c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z" class="fil0"></path></svg>
                         </a>
-                        <a href="catalog.html" class="button type1 scroll-to-link" style="pointer-events: auto;">
+                        <a href="#categories" class="button type1 scroll-to-link" style="pointer-events: auto;">
                             <div class="btn-txt">Explore</div>
                         </a>
                     </div>
@@ -1059,7 +1057,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="catalog.html#mens-rings-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1148,7 +1146,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="catalog.html#necklaces-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1216,7 +1214,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="catalog.html#gold-coins-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1301,7 +1299,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="catalog.html#rings-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1369,7 +1367,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="catalog.html#anklets-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1437,7 +1435,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="catalog.html#gold-chains-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1505,7 +1503,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="catalog.html#mangal-sutra-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1573,7 +1571,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="catalog.html#female-bracelets-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1641,7 +1639,7 @@
                 </div>
             </div>
             <div class="explore-more-btn-container">
-                <a href="catalog.html#watch-ornaments-section" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
+                <a href="catalog.html" class="button type1 text-black bg-gray-200 hover:bg-stone-500 hover:text-white">
                     <div class="btn-txt">Explore More</div>
                 </a>
             </div>
@@ -1661,7 +1659,7 @@
                     <p class="text-sm md:text-base leading-relaxed max-w-lg mx-auto lg:mx-0">
                         We have been working with the most exquisite stones for decades, ensuring a high-end experience for your business. Our team of expert gemologists and designers are ready to help you create your next collection.
                     </p>
-                    <a href="#mens-rings" class="button type1 scroll-to-link">
+                    <a href="catalog.html" class="button type1 scroll-to-link">
                         <div class="btn-txt">More Products</div>
                     </a>
                 </div>
@@ -1685,7 +1683,7 @@
                     <p class="text-sm md:text-base leading-relaxed max-w-lg mx-auto lg:mx-0">
                         For generations, our master craftsmen have dedicated themselves to the art of fine jewelry. We combine timeless traditions with modern design to create pieces that are not just beautiful, but are also heirlooms for the future.
                     </p>
-                    <a href="#mens-rings" class="button type1 scroll-to-link">
+                    <a href="catalog.html" class="button type1 scroll-to-link">
                         <div class="btn-txt">More Products</div>
                     </a>
                 </div>
@@ -1826,7 +1824,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-6 text-center text-sm">
-                <p>&copy; 2023 Stellar Gems. All Rights Reserved.</p>
+                <p>© 2025 Anandsneh Jewellers. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
@@ -2057,7 +2055,7 @@
 
             const systemPrompt = "You are a world-class luxury jewelry copywriter. Your task is to write a single, elegant and sophisticated product description for a jewelry item. The description should be concise, focusing on the quality, emotion, and aesthetic of the piece. Do not include any pricing information or call-to-action.";
             const userQuery = `Write a product description for the following jewelry item: ${productName}`;
-            const apiKey = "";
+            const apiKey = "AIzaSyB12v8Nc1axsUTmE8dk4ygCJIEt8GJDPHw";
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
             const payload = {
@@ -2113,7 +2111,7 @@
 
             const systemPrompt = "You are a creative jewelry designer. Your task is to generate five elegant and unique names for a new jewelry collection or product based on a set of keywords. Present the names as a simple, numbered list. Do not add any extra text or conversation.";
             const userQuery = `Generate 5 elegant product names for a jewelry piece based on these keywords: ${keywords}`;
-            const apiKey = "";
+            const apiKey = "AIzaSyB12v8Nc1axsUTmE8dk4ygCJIEt8GJDPHw";
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
             const payload = {
@@ -2157,7 +2155,7 @@
             const style = document.getElementById('imageStyle').value;
             const fullPrompt = `professional product photography of a high-end jewelry piece, on a black background, with studio lighting, showcasing intricate details: a ${prompt}`;
             
-            const apiKey = "";
+            const apiKey = "AIzaSyB12v8Nc1axsUTmE8dk4ygCJIEt8GJDPHw";
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/imagen-3.0-generate-002:predict?key=${apiKey}`;
 
             const payload = { 
