--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            width: 300px; /* Increased width to fill space better */
-            height: 360px; /* Reduced height for mobile scroll */
+            width: 400px; /* Increased width to fill space better */
+            height: 460px; /* Reduced height for mobile scroll */
             background: var(--card-bg);
             border-radius: 0; /* Removed justify-content: center */
             position: relative;
@@ -83,7 +83,7 @@
         }
 
         .cards:hover > .card:not(:hover) {
-            filter: blur(0px);
+            filter: blur(2px);
             transform: scale(0.9, 0.9);
         }
 
@@ -155,7 +155,7 @@
 
         .card__image {
             width: 100%;
-            height: 2500px; /* Reduced height for smaller cards */
+            height: 300px; /* Reduced height for smaller cards */
             background: linear-gradient(45deg, #a78bfa, #8b5cf6);
             border-radius: 0;
             transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
@@ -771,6 +771,26 @@
             .about-us-images img:first-child {
                 grid-column: auto;
                 grid-row: auto;
+            }
+        }
+
+        /* Responsive adjustments for product cards on mobile */
+        @media (max-width: 767px) {
+            .card {
+                width: 200px;
+                height: 280px;
+            }
+            .card__image {
+                height: 150px;
+            }
+            .card__title {
+                font-size: 1em;
+            }
+            .card__description {
+                font-size: 0.75em;
+            }
+            .card__price {
+                font-size: 0.9em;
             }
         }
     </style>
@@ -2236,4 +2256,3 @@
     </script>
 </body>
 </html>
-
